--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2 class="fw-bold fs-1 mb-0">Unsere Kategorien</h2>
     <a href="#productGrid" class="btn btn-outline-dark px-4 py-2">Alle Produkte entdecken</a>
   </div>
-  <div class="row g-4">
+  <div class="row g-4 category-grid">
     <div class="col-md-3">
       <a href="#" class="category-tile" data-category="Elektronik">
         <img src="produkt bilder/ware.png" alt="Elektronik" class="img-fluid rounded-4 w-100" style="aspect-ratio: 4/3; object-fit: cover;">
