--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles.css?v=1.4" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
 </head>
 <body>
@@ -158,6 +158,30 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
+    <script>
+      // Sanfter Cache-Breaker ohne automatisches Neuladen
+      console.log('Cache-Breaker aktiviert (sanft)...');
+      
+      // CSS mit Zeitstempel neu laden, aber ohne Seiten-Reload
+      const links = document.querySelectorAll('link[rel="stylesheet"]');
+      links.forEach(link => {
+        const href = link.getAttribute('href');
+        if (href && href.includes('styles.css')) {
+          const timestamp = Date.now();
+          const newHref = href.split('?')[0] + '?v=' + timestamp;
+          console.log('Neue CSS-URL:', newHref);
+          link.setAttribute('href', newHref);
+        }
+      });
+      
+      // Optional: Caches löschen, aber ohne Neuladen
+      if ('caches' in window) {
+        caches.keys().then(function(names) {
+          console.log('Lösche Caches:', names);
+          for (let name of names) caches.delete(name);
+        });
+      }
+    </script>
     <!-- Nach oben Button -->
     <button id="scrollToTopBtn" aria-label="Nach oben" style="display:none; position:fixed; bottom:96px; left:32px; z-index:11000; width:56px; height:56px; border-radius:50%; background:linear-gradient(135deg,#667eea,#764ba2); color:#fff; border:none; box-shadow:0 4px 16px rgba(102,126,234,0.18); font-size:2rem; display:flex; align-items:center; justify-content:center; transition:background 0.2s, box-shadow 0.2s; cursor:pointer;">
       <span style="display:flex; align-items:center; justify-content:center; width:100%; height:100%;"><i class="bi bi-arrow-up"></i></span>
