--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="cart-dropdown" id="cartDropdown">
             <div class="cart-dropdown-header">
               <h6 class="mb-0">Warenkorb</h6>
-              <button class="btn-close" id="closeCartDropdown" aria-label="Schließen">×</button>
+              <button class="btn-close" id="closeCartDropdown" aria-label="Schließen">&times;</button>
             </div>
             <div class="cart-dropdown-body" id="cartDropdownBody">
               <div class="empty-cart text-center py-4" id="emptyCartMessage">
